form submission complete, state management not implemented

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "indecision-app",
   "version": "1.0.0",
+  "proxy": "https://developer.nrel.gov",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -16,14 +17,17 @@
     "babel-loader": "7",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "chart.js": "^2.9.3",
     "css-loader": "^3.6.0",
     "formik": "^2.1.5",
     "live-server": "^1.2.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-modal": "^3.11.2",
