--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,9 @@
     ],
     "plugins": [
         "transform-class-properties",
-        "transform-object-rest-spread"
+        "transform-object-rest-spread",
+        ["transform-runtime", {
+            "regenerator": true
+        }]
     ]
 }
