ui tweaking and error-handling

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "chart.js": "^2.9.3",
     "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
     "formik": "^2.1.5",
     "live-server": "^1.2.1",
     "node-sass": "^4.14.1",
@@ -30,6 +31,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-mathjax2": "^0.0.2",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
@@ -37,6 +39,7 @@
     "redux-form": "^8.3.6",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "uuidv4": "^6.2.0",
     "validator": "^13.1.1",
     "webpack": "^4.43.0",
