--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "dev-server": "webpack-dev-server",
-    "build": "webpack"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -21,7 +22,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
     "css-loader": "^3.6.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
     "formik": "^2.1.5",
     "live-server": "^1.2.1",
