--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chart.js": "^2.9.3",
-    "cors": "^2.8.5",
     "css-loader": "^3.6.0",
+    "dotenv": "^8.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
     "formik": "^2.1.5",
     "live-server": "^1.2.1",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
