--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "start":"node server/server.js",
-    "heroku-postbuild":"yarn run build:prod"
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -26,6 +26,7 @@
     "chart.js": "^2.9.3",
     "css-loader": "^3.6.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
     "formik": "^2.1.5",
